# SPV

./: .gitignore  AGENTS.md  README.md  compare.py  cos_transfer.py  data_augmentation.py  dataset.py  download_dataset.py  evaluate_recognition.py  models.py  pyproject.toml  requirements.txt  spv_render.py  train_recognition.py
docs/: recognition.md
outputs/train_recognition/: training_log.csv
reference/: README.md  download_papers.py
src/: __init__.py  config.py  scan.py
src/analysis/: __init__.py  compare.py  confusion.py
src/cloud/: __init__.py  archive_transfer.py  upload.py
src/core/: __init__.py  adaptive.py  complexity.py  phosphene.py  pixelize.py  render.py
src/data/: __init__.py  augmentation.py  dataset.py
src/models/: __init__.py  factory.py  light_cnn.py  resnet18.py
src/scripts/: adaptive.py  augment.py  compare.py  complexity.py  confusion.py  download.py  evaluate.py  pixelize.py  preview.py  render.py  scan.py  spv_render.py  train.py  upload.py
src/training/: __init__.py  evaluator.py  trainer.py
src/utils/: __init__.py  metrics.py  preview.py
