[project]
name = "spv-hanzi"
version = "0.1.0"
description = "Simulated prosthetic vision Chinese character recognition experiments"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "cos-python-sdk-v5==1.9.38",
  "matplotlib==3.9.0",
  "numpy==1.26.4",
  "pillow==10.3.0",
  "torch==2.3.0",
  "torchvision==0.18.0",
  "tqdm==4.66.2",
]

[tool.uv]
package = false
